--- a/style.css
+++ b/style.css
@@ -1,72 +1,78 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+html {
     width: 100%;
     height: 100%;
 }
-ul{
+
+ul {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-body{
+body {
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
-    background-color:#F8F8FA;
+    background-color: #F8F8FA;
     width: 100%;
     height: 100%;
 }
 
-img{
+img {
     max-width: 100%;
     display: block;
 }
 
-header{
+header {
     background-color: #27262D;
     font-family: 'Roboto Slab', Georgia, 'Times New Roman', Times, serif;
 }
-#headercontent{
-   max-width: 80%;
-   margin: 0 auto;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
-   align-items: center;
-   padding: 1.25em;
+
+#headercontent {
+    max-width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.25em;
 }
-#menuicon{
+
+#menuicon {
     display: none;
 }
 
-header ul{
+header ul {
     display: flex;
 }
 
-header ul li+li{
+header ul li+li {
     margin-left: 2em;
 }
 
-header ul li a{
+header ul li a {
     color: white;
 }
+
 header ul li a:hover {
     color: #FFF500;
 }
 
-#logo{
-    padding-right:20px;
+#logo {
+    padding-right: 20px;
 }
-#logo a{
+
+#logo a {
     color: white;
 }
 
-#logo span{
+#logo span {
     color: #FFF500;
 }
 
@@ -74,8 +80,8 @@ header ul li a:hover {
 
 /*img home*/
 
-#imgshow{
-    background:url('img/imgshow.png');
+#imgshow {
+    background: url('img/imgshow.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -87,40 +93,45 @@ header ul li a:hover {
 
 /*content*/
 
-#content{   
+#content {
     max-width: 80%;
     margin: 0 auto;
     margin-top: 1em;
 }
 
-#icons{
+#icons {
     display: flex;
     margin: 80px;
-    justify-content: center;    
+    justify-content: center;
 }
-#icons li{
-    min-width: 50px;  
+
+#icons li {
+    min-width: 50px;
     margin: 0 20px;
 }
 
-#icons img{
+#icons img {
     cursor: pointer;
 }
 
-.bar{
+.bar {
     border-bottom: 1px solid #27262D;
     margin: 50px 0 100px 0;
 }
 
+p {
+    line-height: 1.5em;
+}
+
 /*soccer section*/
-h2{
+h2 {
     font-family: 'Roboto Slab', Georgia, 'Times New Roman', Times, serif;
     writing-mode: tb-rl;
     text-orientation: upright;
     text-transform: uppercase;
 }
 
-.grid-sport{
+.grid-sport {
     display: grid;
     grid-template-columns: 20% autofit 20% 20% 20%;
     grid-auto-flow: dense;
@@ -129,47 +140,51 @@ h2{
     margin-bottom: 30px;
 }
 
-.grid-item> img{
+.grid-item>img {
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
 
-#imgsoccergrid1{
+#imgsoccergrid1 {
     grid-column: 1/2;
     grid-row: 1/3;
 }
 
-#imgsoccergrid2{
+#imgsoccergrid2 {
     grid-column: 3/5;
     grid-row: 1/2;
 }
-#imgsoccergrid3{
+
+#imgsoccergrid3 {
     grid-column: 5/6;
     grid-row: 1/2;
 }
 
-#imgsoccergrid4{
+#imgsoccergrid4 {
     grid-column: 3/4;
     grid-row: 2/2;
 }
-#imgsoccergrid5{
+
+#imgsoccergrid5 {
     grid-column: 4/5;
     grid-row: 2/2;
 }
-#imgsoccergrid6{
+
+#imgsoccergrid6 {
     grid-column: 5/6;
     grid-row: 2/2;
 }
 
-#content p{
-    position:relative;
-    font-family: 'Nunito',Arial, Helvetica, sans-serif;
+#content p {
+    position: relative;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
     line-height: 1em;
     color: #000;
     margin-bottom: 20px;
 }
-#content p::before{
+
+#content p::before {
     position: absolute;
     content: '';
     padding: 5px;
@@ -178,104 +193,104 @@ h2{
 
 /*Cycling*/
 
-#imgcycling1{
+#imgcycling1 {
     grid-column: 1/2;
     grid-row: 1/3;
 }
 
-#imgcycling2{
+#imgcycling2 {
     grid-column: 3/4;
     grid-row: 1/2;
 }
 
-#imgcycling3{
+#imgcycling3 {
     grid-column: 5/6;
     grid-row: 1/2;
 }
 
-#imgcycling4{
+#imgcycling4 {
     grid-column: 4/6;
     grid-row: 2/2;
 }
 
-#imgcycling5{
+#imgcycling5 {
     grid-column: 4/5;
     grid-row: 1/2;
 }
 
-#imgcycling6{
-    grid-column:3/4;
+#imgcycling6 {
+    grid-column: 3/4;
     grid-row: 2/2;
 }
 
 /*Basketball*/
 
-#imgbasket1{
+#imgbasket1 {
     grid-column: 1/2;
     grid-row: 1/3;
 }
 
-#imgbasket2{
+#imgbasket2 {
     grid-column: 3/5;
     grid-row: 1/2;
 }
 
-#imgbasket3{
+#imgbasket3 {
     grid-column: 5/6;
     grid-row: 1/2;
 }
 
-#imgbasket4{
+#imgbasket4 {
     grid-column: 3/4;
     grid-row: 2/2;
 }
 
-#imgbasket5{
+#imgbasket5 {
     grid-column: 4/5;
     grid-row: 2/2;
 }
 
-#imgbasket6{
+#imgbasket6 {
     grid-column: 5/6;
     grid-row: 2/2;
 }
 
 /*Bodybuilding*/
 
-#imgbody1{
+#imgbody1 {
     grid-column: 1/2;
     grid-row: 1/3;
 }
 
 
-#imgbody2{
+#imgbody2 {
     grid-column: 3/4;
     grid-row: 1/2;
 }
 
-#imgbody3{
+#imgbody3 {
     grid-column: 4/6;
     grid-row: 1/2;
 }
 
-#imgbody4{
+#imgbody4 {
     grid-column: 3/4;
     grid-row: 2/2;
 }
 
-#imgbody5{
+#imgbody5 {
     grid-column: 4/5;
     grid-row: 2/2;
 }
 
-#imgbody6{
+#imgbody6 {
     grid-column: 5/6;
     grid-row: 2/2;
 }
 
 /*footer*/
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -285,106 +300,126 @@ footer{
     font-size: 0.875em;
 }
 
-footer span{
+footer span {
     color: #FFF500;
 }
 
 /*media querys*/
 
 
-@media(max-width:1250px){
-    #imgsoccergrid3, #imgsoccergrid6, #imgbasket3{
+@media(max-width:1250px) {
+
+    #imgsoccergrid3,
+    #imgsoccergrid6,
+    #imgbasket3 {
         display: none;
     }
-    
-    #imgbasket6{
+
+    #imgbasket6 {
         grid-row: 1/3;
     }
 }
 
-@media(max-width:1150px){
-    #imgcycling2,#imgcycling6{
+@media(max-width:1150px) {
+
+    #imgcycling2,
+    #imgcycling6 {
         display: none;
     }
 
-    #imgbasket6{
+    #imgbasket6 {
         display: none;
     }
 
-    #imgbody2, #imgbody4{
+    #imgbody2,
+    #imgbody4 {
         display: none;
     }
 }
 
-@media(max-width:820px){
+@media(max-width:820px) {
 
-        #headercontent{
-            flex-direction: column;
-            max-width: 100%;
-        }
+    #headercontent {
+        flex-direction: column;
+        max-width: 100%;
+    }
 
-        header ul{
-            padding-top: 1.25em;
-        }
-    
-        header ul li+li{
-            margin-left: 4em;
-        }
-    
-    .grid-sport{
+    header ul {
+        padding-top: 1.25em;
+    }
+
+    header ul li+li {
+        margin-left: 4em;
+    }
+
+    .grid-sport {
         display: flex;
         flex-direction: column;
     }
 
-    #imgsoccergrid1,#imgsoccergrid4,#imgsoccergrid5,#imgcycling1,#imgcycling5,#imgcycling3,#imgbasket1,#imgbasket2,#imgbasket4,#imgbody1,#imgbody3,#imgbody6 {
+    #imgsoccergrid1,
+    #imgsoccergrid4,
+    #imgsoccergrid5,
+    #imgcycling1,
+    #imgcycling5,
+    #imgcycling3,
+    #imgbasket1,
+    #imgbasket2,
+    #imgbasket4,
+    #imgbody1,
+    #imgbody3,
+    #imgbody6 {
         display: none;
     }
 
-    h2{
+    h2 {
         text-orientation: initial;
         writing-mode: initial;
     }
 }
 
-@media(max-width:550px){
-    
-    #logo{
+@media(max-width:550px) {
+
+    #logo {
         padding-right: 0;
     }
-    #headercontent{
+
+    #headercontent {
         flex-direction: row;
     }
 
-    #menuicon{
+    #menuicon {
         display: block;
         background-color: #FFF500;
         width: 20px;
         cursor: pointer;
     }
 
-    header nav{
+    header nav {
         display: none;
         width: 100%;
     }
 
-    header ul{
+    header ul {
         flex-direction: column;
         width: 100%;
     }
-    header ul li + li{
+
+    header ul li+li {
         margin-left: 0;
         border-top: 1px solid #FFF500;
     }
 
-    header ul li{
-        text-align:center;
+    header ul li {
+        text-align: center;
         padding: 10px;
     }
 
 }
-@media(max-width:480px){
 
-    #icons li{
+@media(max-width:480px) {
+
+    #icons li {
         margin: 0 10px;
     }
 }
